# Ambit_Stochastics

./: LICENSE  README.md  Simple Ambit field example usage.ipynb  Trawl processes example usage.ipynb  Untitled.ipynb  citation.cff  covariance_matrix_for_stationary_fields.py  requirements.txt  setup.cfg  trawl_tests.py
docs/: index.html  simple_ambit_field.html  trawl.html
docs/ambit_stochastics/: simple_ambit_field.html  trawl.html
docs/helpers/: Laplace_transform_inversion.html  acf_functions.html  adaptive_rejection_sampling_tangents.html  cov_estimator.html  covariance_matrix_for_stationary_fields.html  forecasting_helpers.html  index.html  input_checks.html  loss_functions.html  marginal_distribution_functions.html  sampler.html
inference/gamma_levy_seed/: modified_bfgs_test.py
inference/gaussian_levy_seed/: bfgs_for_cl_helper.py  cl_dictionary.pickle  cl_time.pickle  exact CL for Gaussian Levy seeds and exponential, gamma & ig envelopes .ipynb  gamma_helper_jax_cluster_script.py  generate_trawls_with_gaussian_marginal.py  gmm_dictionary.pickle  jax_aux_jitted_gaussian.ipynb  jax_aux_jitted_gaussian.py  jax_script_gaussian.ipynb  jax_script_gaussian.py  r_all.npy  test_jax_gaussian_cl_implementation.ipynb  text.txt  values_par2.npy  values_to_use.npy
laplace_inversion_related/: test_laplace_trainversion.py
other scripts/: README.txt  ambit_fields_params_for_simulations.py  cov_test.py  time_tests.py  vol_mod_trawl.py
other scripts/ambit_fields/: finite_decor_time.py
src/: Trawl processes example usage.ipynb
src/ambit_stochastics/: __init__.py  (+3 more)
(+166 files in other folders)
