[metadata]
name = Ambit Stochastics
version = 1.1.19
author = Dan Leonte
author_email = dleonte97@gmail.com
description = A pacakge dedicated to the study of Ambit fields and Trawl processes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danleonte/Ambit_Stochastics
project_urls =
    Bug Tracker = https://github.com/danleonte/Ambit_Stochastics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5

[options.packages.find]
where = src